<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context="gdsc.greenchoice3.ui.notifications.NotificationsFragment">

    <ImageView
        android:id="@+id/header"
        android:layout_height="150sp"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:contentDescription="@string/header_description"
        android:src="@drawable/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/impact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/impact_page_title"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/header"
        app:layout_constraintRight_toRightOf="@id/header"
        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintVertical_bias="0.3"
        android:textColor="@color/title"/>


    <ProgressBar
        android:id="@+id/daily_progress"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/transparent"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/progressbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313"
        tools:progress="50" />

    <TextView
        android:id="@+id/daily_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/daily_percent_label"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/daily_progress"
        app:layout_constraintLeft_toLeftOf="@+id/daily_progress"
        app:layout_constraintRight_toRightOf="@+id/daily_progress"
        app:layout_constraintTop_toTopOf="@+id/daily_progress"
        app:layout_constraintVertical_bias="0.44" />


<!--    Stat1 -->
    <ImageView
        android:id="@+id/stat1_helper"
        android:layout_width="196dp"
        android:layout_height="70dp"
        android:background="@color/transparent"
        android:src="@drawable/layout_helper"
        android:contentDescription="GreenChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/stat2_helper"
        app:layout_constraintTop_toBottomOf="@id/daily_progress"
        app:layout_constraintVertical_bias="0.0"/>


    <TextView
        android:id="@+id/stat1_title"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat1_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/stat1_quantity"
        app:layout_constraintLeft_toLeftOf="@+id/stat1_helper"
        app:layout_constraintRight_toRightOf="@+id/stat1_helper"
        app:layout_constraintTop_toTopOf="@id/stat1_helper"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/stat1_quantity"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat1_quantity"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/stat1_rank"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/stat1_helper"
        app:layout_constraintRight_toRightOf="@id/stat1_helper"
        app:layout_constraintTop_toBottomOf="@id/stat1_title"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/stat1_rank"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat1_rank"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/stat1_helper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/stat1_helper"
        app:layout_constraintRight_toRightOf="@id/stat1_helper"
        app:layout_constraintTop_toBottomOf="@id/stat1_quantity"
        app:layout_constraintVertical_bias="0.5" />


<!--    Stat2-->
    <ImageView
        android:id="@+id/stat2_helper"
        android:layout_width="196dp"
        android:layout_height="70dp"
        android:contentDescription="GreenChoice"
        android:background="@color/transparent"
        android:src="@drawable/layout_helper"
        app:layout_constraintBottom_toBottomOf="@id/stat1_helper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/stat1_helper"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/stat1_helper"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/stat2_title"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat2_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/stat2_quantity"
        app:layout_constraintLeft_toLeftOf="@id/stat2_helper"
        app:layout_constraintRight_toRightOf="@id/stat2_helper"
        app:layout_constraintTop_toTopOf="@id/stat2_helper"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/stat2_quantity"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat2_quantity"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/stat2_rank"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/stat2_helper"
        app:layout_constraintRight_toRightOf="@id/stat2_helper"
        app:layout_constraintTop_toBottomOf="@id/stat2_title"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/stat2_rank"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat2_rank"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/stat2_helper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/stat2_helper"
        app:layout_constraintRight_toRightOf="@id/stat2_helper"
        app:layout_constraintTop_toBottomOf="@id/stat2_quantity"
        app:layout_constraintVertical_bias="0.5" />

<!--    Stat3 -->

    <ImageView
        android:id="@+id/stat3_helper"
        android:contentDescription="GreenChoice"
        android:layout_width="196dp"
        android:layout_height="70dp"
        android:background="@color/transparent"
        android:src="@drawable/layout_helper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/stat1_helper"
        app:layout_constraintRight_toRightOf="@id/stat1_helper"
        app:layout_constraintTop_toBottomOf="@id/stat1_helper"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/stat3_title"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat3_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/stat3_quantity"
        app:layout_constraintLeft_toLeftOf="@+id/stat3_helper"
        app:layout_constraintRight_toRightOf="@+id/stat3_helper"
        app:layout_constraintTop_toTopOf="@id/stat3_helper"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/stat3_quantity"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat3_quantity"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/stat3_rank"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/stat3_helper"
        app:layout_constraintRight_toRightOf="@id/stat3_helper"
        app:layout_constraintTop_toBottomOf="@id/stat3_title"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/stat3_rank"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat3_rank"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/stat3_helper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/stat3_helper"
        app:layout_constraintRight_toRightOf="@id/stat3_helper"
        app:layout_constraintTop_toBottomOf="@id/stat3_quantity"
        app:layout_constraintVertical_bias="0.5" />

<!--    Stat4 -->
    <ImageView
        android:id="@+id/stat4_helper"
        android:layout_width="196dp"
        android:layout_height="70dp"
        android:contentDescription="GreenChoice"
        android:background="@color/transparent"
        android:src="@drawable/layout_helper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/stat3_helper"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stat2_helper"
        app:layout_constraintVertical_bias="0.5"/>


    <TextView
        android:id="@+id/stat4_title"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat4_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/stat4_quantity"
        app:layout_constraintLeft_toLeftOf="@+id/stat4_helper"
        app:layout_constraintRight_toRightOf="@+id/stat4_helper"
        app:layout_constraintTop_toTopOf="@id/stat4_helper"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/stat4_quantity"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat4_quantity"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/stat4_rank"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/stat4_helper"
        app:layout_constraintRight_toRightOf="@id/stat4_helper"
        app:layout_constraintTop_toBottomOf="@id/stat4_title"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/stat4_rank"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/stat4_rank"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/stat4_helper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/stat4_helper"
        app:layout_constraintRight_toRightOf="@id/stat4_helper"
        app:layout_constraintTop_toBottomOf="@id/stat4_quantity"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>